# computorv1

./: CMakeLists.txt  README.md
include/: exceptions.h  interpreter.h  lexer.h  parser.h  term.h  token.h  tree.h  utils.h  visitors.h
src/: CMakeLists.txt  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  term.cpp  token.cpp  tree.cpp  utils.cpp  visitors.cpp
tests/: CMakeLists.txt  hello_test.cpp  interpreter.tests.cpp  lexer.tests.cpp  parser.tests.cpp  term.tests.cpp  utils.tests.cpp  utils_tests.cpp
